engine/tests/fixtures/invalid/http-responses/shape-input-list.tg
shape shape_input_list_tasks {
  name "List Tasks Input"
  description "Cursor listing input"

  fields {
    after text optional
    limit integer optional default 25
  }

  status active
}
